--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   ],
   "editor.wordWrap": "on",
   "editor.wordWrapColumn": 80,
-  "editor.wrappingIndent": "indent"
+  "editor.wrappingIndent": "indent",
+  "files.autoSave": "afterDelay"
 }
